<resources>
    <string name="app_lang">en</string>
    <string name="app_name">RIDP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Rural Infrastructure Development Project</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sign_out">Sign out</string>

    <string name="menu_home">Main Page</string>
    <string name="menu_feedback">Saved Feedback</string>
    <string name="menu_dashboard">Questionnaires</string>

    <string name="home_second">Home Second</string>
    <string name="permission_message">permission granted</string>
    <string name="admin">Admin</string>
    <string name="social">Social</string>
    <string name="additions">Additions</string>
    <string name="share">Share</string>
    <string name="pvp_moderator">RIDP moderator</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_the_received_via_sms_code">Enter the code received via SMS</string>
    <string name="enter_verification_code">enter verification code</string>
    <string name="feedback_title">Feedback title…</string>
    <string name="feedback_description">Feedback description…</string>
    <string name="anonymous_feedback">Anonymous feedback</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="continue_button">Continue</string>
    <string name="reply">Reply</string>
    <string name="reject">Reject</string>
    <string name="verify">Verify</string>
    <!--Post Activity-->
    <string name="post_feedback">Post Feedback</string>
    <string name="select_region">Select Region…</string>
    <string name="andijan">Andijan</string>
    <string name="jizzakh">Jizzakh</string>
    <string name="namangan">Namangan</string>
    <string name="syrdarya">Syrdarya</string>
    <string name="fergana">Fergana</string>
    <string name="select_district">Select District…</string>
    <string name="bulakbashi">Bulakbashi</string>
    <string name="paxtaobod">Paxtaobod</string>
    <string name="markhamat">Markhamat</string>
    <string name="ulugnar">Ulugnar</string>
    <string name="boz">Boz</string>
    <string name="bakhmal">Bakhmal</string>
    <string name="zomin">Zomin</string>
    <string name="forish">Forish</string>
    <string name="yangiobod">Yangiobod</string>
    <string name="minbulak">Minbulak</string>
    <string name="pop">Pop</string>
    <string name="chartak">Chartak</string>
    <string name="chust">Chust</string>
    <string name="yangikurgan">Yangikurgan</string>
    <string name="boevut">Boevut</string>
    <string name="sardoba">Sardoba</string>
    <string name="hovos">Hovos</string>
    <string name="sokh">Sokh</string>
    <string name="furqat">Furqat</string>
    <string name="yazyavan">Yazyavan</string>
    <string name="kushtepa">Kushtepa</string>
    <string name="select_village">Select Village…</string>
    <string name="sokhil_mfy">Sokhil</string>

    <string name="saroy_mfy">Saroy</string>
    <string name="bakhmal_mfy">Bakhmal</string>
    <string name="madaniyat_mfy">Madaniyat</string>
    <string name="uzunbuloq_mfy">Uzunbuloq</string>
    <string name="oykor_mfy">Oykor</string>
    <string name="temirqadam_mfy">Temirqadam</string>
    <string name="sangzor_mfy">Sangzor</string>
    <string name="molguzar_mfy">Molguzar</string>
    <string name="muzbuloq_mfy">Muzbuloq</string>

    <string name="birlashgan_mfy">Birlashgan</string>

    <string name="khojamushkent_mfy">Khojamushkent</string>

    <string name="nurlikent_mfy">Nurlikent</string>
    <string name="gulshan_mfy">Gulshan</string>

    <string name="empty_fields">Empty fields!</string>
    <string name="please_fill_all_fields">Please fill all fields!</string>
    <string name="success">Success!</string>
    <string name="feedback_successfully_saved">Feedback successfully saved!</string>
    <string name="oops">Oops…</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="posting_feedback">Posting Feedback…</string>
    <string name="feedback_successfully_uploaded">Feedback successfully uploaded!</string>
    <string name="what_do_you_want_to_do_with_this_feedback">What do you want to do with this feedback?</string>
    <string name="upload">Upload</string>
    <string name="delete">Delete</string>
    <string name="sign_in">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="failure">Wrong login or password</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_exit_application">Are you sure you want to exit application?</string>
    <string name="exit">Exit</string>
    <string name="feedback_info">Feedback Info</string>
    <string name="administrator">Administrator</string>
    <string name="verify_post">Verify Post</string>
    <string name="feedback">Feedback</string>
    <string name="news">News</string>
    <string name="open_data">Open Data</string>

    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>
