<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/action_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/feedback_icon"
            android:title="@string/menu_feedback" />
        <!--<item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/dashboard_icon"
            android:title="@string/menu_dashboard" />-->
        <item
            android:id="@+id/nav_admin"
            android:icon="@mipmap/baseline_account_circle_white_48"
            android:title="@string/admin" />
    </group>
    <item android:title="@string/social">
        <menu>
            <item
                android:id="@+id/id_facebook"
                android:icon="@drawable/facebook_icon"
                android:title="Facebook" />
            <item android:id="@+id/id_twitter"
                android:icon="@drawable/baseline_twitter_24"
                android:title="Twitter"/>
            <item
                android:title="Telegram"
                android:icon="@drawable/telegram_icon"
                android:id="@+id/id_telegram"/>
        </menu>
    </item>
    <item android:title="@string/additions">
        <menu>
            <item
                android:id="@+id/id_share"
                android:icon="@drawable/baseline_share_24"
                android:title="@string/share"
                />
            <item
                android:id="@+id/logout"
                android:icon="@mipmap/baseline_exit_to_app_black_48"
                android:title="@string/sign_in"/>
        </menu>
    </item>
</menu>
